--- a/GettingData.ipynb
+++ b/GettingData.ipynb
@@ -46,7 +46,7 @@
     }
    ],
    "source": [
-    "urlretrieve(URL, '../freemont.csv')"
+    "urlretrieve(URL, 'freemont.csv')"
    ]
   },
   {
@@ -183,7 +183,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "data = pd.read_csv('../freemont.csv', index_col='Date', parse_dates=True)\n",
+    "data = pd.read_csv('freemont.csv', index_col='Date', parse_dates=True)\n",
     "data.head(10)"
    ]
   },
