--- a/VersionControl.ipynb
+++ b/VersionControl.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "data = pd.read_csv('../freemont.csv', index_col='Date', parse_dates=True)\n",
+    "data = pd.read_csv('freemont.csv', index_col='Date', parse_dates=True)\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt"
    ]
