--- a/Plotting.ipynb
+++ b/Plotting.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "data = pd.read_csv('../freemont.csv', index_col='Date', parse_dates=True)\n",
+    "data = pd.read_csv('freemont.csv', index_col='Date', parse_dates=True)\n",
     "%matplotlib inline"
    ]
   },
