Add 5th file and custom package dir

--- a/CreatePythonPackage.ipynb
+++ b/CreatePythonPackage.ipynb
@@ -6,7 +6,7 @@
     "collapsed": true
    },
    "source": [
-    "# Reproducible data analysis in Jupyter: working with data and GitHub"
+    "# Creating a Python package"
    ]
   },
   {
@@ -40,32 +40,76 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from urllib.request import urlretrieve\n",
+    "from jupyterworkflow.data import get_freemont_data\n",
     "\n",
     "URL = 'https://data.seattle.gov/api/views/65db-xm6k/rows.csv?accessType=DOWNLOAD'\n",
     "\n",
-    "def get_freemont_data(filename='freemont.csv', url=URL, force_download=False):\n",
-    "    if force_download or not os.path.exists(filename):\n",
-    "        urlretrieve(url, filename)\n",
-    "    data = pd.read_csv('freemont.csv', index_col='Date', parse_dates=True)\n",
-    "    data.columns = ['West','East']\n",
-    "    data['Total'] = data['West'] + data['East']\n",
-    "    return data"
+    "data = get_freemont_data('freemont.csv', URL, False)\n",
+    "data.columns = ['West','East']\n",
+    "data['Total'] = data['West'] + data['East']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "- this version also works"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import jupyterworkflow.data as jwd\n",
+    "\n",
+    "URL = 'https://data.seattle.gov/api/views/65db-xm6k/rows.csv?accessType=DOWNLOAD'\n",
+    "\n",
+    "data = jwd.get_freemont_data('freemont.csv', URL, False)\n",
+    "data.columns = ['West','East']\n",
+    "data['Total'] = data['West'] + data['East']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- acces documentation for fucntion 'get_freemont_data'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = get_freemont_data()"
+    "jwd.get_freemont_data?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- access the source code for te function 'get_freemont_data'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "jwd.get_freemont_data??"
    ]
   },
   {
