Add 6th file, implement unit test

--- a/CreatePythonPackage.ipynb
+++ b/CreatePythonPackage.ipynb
@@ -40,16 +40,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from jupyterworkflow.data import get_freemont_data\n",
     "\n",
-    "URL = 'https://data.seattle.gov/api/views/65db-xm6k/rows.csv?accessType=DOWNLOAD'\n",
-    "\n",
-    "data = get_freemont_data('freemont.csv', URL, False)\n",
-    "data.columns = ['West','East']\n",
-    "data['Total'] = data['West'] + data['East']"
+    "data = get_freemont_data()"
    ]
   },
   {
@@ -71,11 +69,7 @@
    "source": [
     "import jupyterworkflow.data as jwd\n",
     "\n",
-    "URL = 'https://data.seattle.gov/api/views/65db-xm6k/rows.csv?accessType=DOWNLOAD'\n",
-    "\n",
-    "data = jwd.get_freemont_data('freemont.csv', URL, False)\n",
-    "data.columns = ['West','East']\n",
-    "data['Total'] = data['West'] + data['East']"
+    "data = jwd.get_freemont_data()"
    ]
   },
   {
@@ -88,7 +82,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "jwd.get_freemont_data?"
