Add 6th file, implement unit test

--- a/UnitTest.ipynb
+++ b/UnitTest.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -100,7 +100,8 @@
     "- PyTest is a framework for unitary tests that can do it for you.\n",
     "- create a tests directory under your package directory\n",
     "- create a test_data.py (to test data) under this new directory and copy/paste the previous function in it\n",
-    "- run the command 'python -m pytest jupyterworkflow' to test "
+    "- run the command 'python -m pytest jupyterworkflow' to test the package directory\n",
+    "- pytest will make sure that every assertion pass"
    ]
   },
   {
